# f1-dashboard

./: Cargo.toml  README.md
client/: next.config.ts  package-lock.json  package.json
client/src/: globals.css
client/src/app/: globals.css  layout.tsx  page.tsx
server/src/: main.rs
src/: main.rs
